Added project links.

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 		<div class="project" id="quantum-password-project">
 			<h2 class="project-title">Quantum Passsword Generator</h2>
 			<div class="image-container">
-				<a href="" target="_blank">
+				<a href="https://github.com/kianazig/Quantum-Password-Generator" target="_blank">
 					<img src="photos\quantum-password-generator.png" alt="Quantum Password Generator">
 				</a>
 				<div class="image-text">
-					<a href="" class="image-text">View Project</a>
+					<a href="https://github.com/kianazig/Quantum-Password-Generator" target="_blank" class="image-text">View Project</a>
 				</div>
 			</div>
 			<div class="project-description">
@@ -88,11 +88,11 @@
 		<div class="project" id="nand-to-tetris">
 			<h2 class="project-title">Nand to Tetris</h2>
 			<div class="image-container">
-				<a href="" target="_blank">
+				<a href="https://github.com/kianazig/NandToTetris" target="_blank">
 					<img src="photos\nand-to-tetris.jpg" alt="Nand to Tetris">
 				</a>
 				<div class="image-text">
-					<a href="" class="image-text">View Project</a>
+					<a href="https://github.com/kianazig/NandToTetris" target="_blank" class="image-text">View Project</a>
 				</div>
 			</div>
 			<div class="project-description">
