Added 'About Me' section.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div id="titles-div">
 			<ul id="titles">
 				<li><a href="#projects-anchor">Projects</a></li>
-				<li><a href="">About</a></li>
+				<li><a href="#about-anchor">About</a></li>
 				<li><a href="about.html">Contact</a></li>
 			</ul>
 			<div class="clr"></div>
@@ -36,7 +36,7 @@
 	</div>
 
 	<div class="projects">
-		<h1 id="projects-anchor">Projects</h1>
+		<h1 id="projects-anchor" class="section-title">Projects</h1>
 
 		<hr>
 
@@ -105,6 +105,25 @@
 				</p>
 			</div>
 		</div>
+	</div>
+
+	<div class="about-wrapper">
+		<h1 id="about-anchor" class="section-title">About Me</h1>
+		<div class="about-content">
+			<div class="profile">
+				<img src="photos\placeholder-profile.jpg">
+			</div>
+			<div class="about-text-wrapper">
+				<div class="about-text">
+					<h2>Kiana Ziglari</h2>
+					<p>
+						I'm a senior at Cal Poly Pomona, studying Computer Science with a Minor in Mathematics.<br><br>
+						I like to solve problems, and code is my tool of choice.<br>
+						I also like bouldering, role-playing games, and puzzles. 
+					</p>
+				</div>
+			</div>
+		</div>	
 	</div>
 	
 
