Added some text to "About Me" section.

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 					<h2>Kiana Ziglari</h2>
 					<p>
 						I'm a senior at Cal Poly Pomona, studying Computer Science with a Minor in Mathematics.<br><br>
+						I have an active role as the Community Lead of the <a href="https://www.cppsea.com/" target="_blank">Software Engineering Association</a>, fostering communication, recruiting members, and initiating new programs.<br><br>
 						I like to solve problems, and code is my tool of choice.<br>
 						I also like bouldering, role-playing games, and puzzles. 
 					</p>
