Added link to D&D Project "View Project" text.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<img src="photos\damage-calculator-website.png" alt="Damage Calculator Website">
 				</a>
 				<div class="image-text">
-					<a href="" class="image-text">View Project</a>
+					<a href="http://htmlpreview.github.io/?https://github.com/kianazig/DnD-Damage-Calculator-Website/blob/master/Damage%20Calculator%20Website/index.html" target="_blank" class="image-text">View Project</a>
 				</div>
 			</div>
 			<div class="project-description">
