Replaced placeholder profile picture with actual picture.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 		<h1 id="about-anchor" class="section-title">About Me</h1>
 		<div class="about-content">
 			<div class="profile">
-				<img src="photos\placeholder-profile.jpg">
+				<img src="photos\profile-picture.jpg">
 			</div>
 			<div class="about-text-wrapper">
 				<div class="about-text">
