Added website icon.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
 	<link href="css\style.css" type="text/css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link rel="icon" href="photos\curly-bracket-2.png">
 	<title>Kiana Ziglari</title>
 </head>
 
