Added netlify to form and changed border from projects to opener.

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 	<div class="contact-section">
 		<h1 id="contact-anchor" class="section-title">Contact</h1>
 		<div id="contact-form">
-			<form action="mailto:kziglari@cpp.edu" method="post" enctype="text/plain">
+			<form name="contact" method="POST" data-netlify="true">
 				<div class="form-row">
 					<input type="text" name="name" required placeholder="Name *">
 				</div>
