Fixed typo ("Passsword" to "Password").

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<hr>
 
 		<div class="project" id="quantum-password-project">
-			<h2 class="project-title">Quantum Passsword Generator</h2>
+			<h2 class="project-title">Quantum Password Generator</h2>
 			<div class="image-container">
 				<a href="https://github.com/kianazig/Quantum-Password-Generator" target="_blank">
 					<img src="photos\quantum-password-generator.png" alt="Quantum Password Generator">
